apps/vertical-pod-autoscaler/manifests/MutatingWebhookConfiguration-vertical-pod-autoscaler-webhook-config.yml
---
# Source: vertical-pod-autoscaler/templates/admission-controller-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: vertical-pod-autoscaler-webhook-config
  labels:
    app.kubernetes.io/name: vertical-pod-autoscaler
    app.kubernetes.io/instance: vertical-pod-autoscaler
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-controller
    app.kubernetes.io/component-instance: vertical-pod-autoscaler-admission-controller
  annotations:
    cert-manager.io/inject-ca-from: vertical-pod-autoscaler/vertical-pod-autoscaler-webhook-cert
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      # caBundle is injected by the certgen patch job (certGen mode) or by cert-manager cainjector (certManager mode)
      service:
        name: vpa-webhook
        namespace: vertical-pod-autoscaler
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: vpa.k8s.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
        scope: '*'
      - apiGroups:
          - autoscaling.k8s.io
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - verticalpodautoscalers
        scope: '*'
    sideEffects: None
    timeoutSeconds: 5
